Empezamos con las animaciones y transiciones

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <main>
+        <div class="circle"></div>
+        <div class="circle-two"></div>
         <div class="luther-info">
             <h1 class="luther-titulo">La historia de Luther</h1>
             <figure class="luther-box">
