Prueba de texto, arreglar el hub y texto llamativo

--- a/index.html
+++ b/index.html
@@ -20,17 +20,19 @@
                     
                     <div class="cofre" id="cofre-box">
                             <a href="javascript:;" class="link-gif" onclick="sup1.play(); return false;" id="gif-link">
-                                <img id="cofre2" class="cofre-img" src="" rel:animated_src="img/cofre.gif" rel:auto_play="0"/>
+                                <img id="cofre2" class="cofre-img" src="" rel:animated_src="img/cofre.gif" rel:auto_play=""/>
                             </a>
                     </div>
                 <ul class="luther-texto" id="lutherTexto">
                     <li>Vaya... !Veo que me has encontrado!</li>
                     <li>Para serte sincero no pensé que fueras a encontrarme tan rápido...</li>
                     <li>Permiteme presentarme viajero...</li>
-                    <li>Verás, soy Luther, vengo de <span class="alien-word">#?%&$!</span>, tuve conflictos después de haber <span class="alien-word">+#$@&</span> en <span class="alien-word">$?#&+</span> y he terminado aquí.</li>
-                    <li class="hub">Bienvenido a mi mundo Viajero, prepárate para lo que está por venir.</li>
-                    <a href="#" class="link-hub" id="hub">Ir al HUB</a>
+                    <li>Verás, soy Luther, vengo de <span class="alien-word">#?%&$!</span></li>
+                    <li>tuve conflictos después de haber <span class="alien-word">+#$@&</span> en <span class="alien-word">$?#&+</span> y he terminado aquí.</li>
                 </ul>
+                <li>Bienvenido a mi mundo Viajero, prepárate para lo que está por venir.</li>
+                <li>Que esperas para conocerme</li>
+                <a href="#" class="link-hub" id="hub">Ir al HUB</a>
             </div>
         </main>
         <script type="text/javascript">
