--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     
                     <div class="cofre" id="cofre-box">
                             <a href="javascript:;" class="link-gif" onclick="sup1.play(); return false;" id="gif-link">
-                                <img id="cofre2" class="cofre-img" src="" rel:animated_src="img/cofre.gif" rel:auto_play=""/>
+                                <img id="cofre2" class="cofre-img" src="" rel:animated_src="img/cofre.gif" rel:auto_play="0"/>
                             </a>
                     </div>
                 <ul class="luther-texto" id="lutherTexto">
@@ -29,10 +29,13 @@
                     <li>Permiteme presentarme viajero...</li>
                     <li>Verás, soy Luther, vengo de <span class="alien-word">#?%&$!</span></li>
                     <li>tuve conflictos después de haber <span class="alien-word">+#$@&</span> en <span class="alien-word">$?#&+</span> y he terminado aquí.</li>
+                    <li>Bienvenido a mi mundo Viajero, prepárate para lo que está por venir.</li>
+                    <li>Que esperas para conocerme</li>
                 </ul>
-                <li>Bienvenido a mi mundo Viajero, prepárate para lo que está por venir.</li>
-                <li>Que esperas para conocerme</li>
-                <a href="#" class="link-hub" id="hub">Ir al HUB</a>
+
+                <div class="hub-box" id="hub-box">
+                    <a href="#" class="link-hub" id="hub">Ir al HUB</a>
+                </div>
             </div>
         </main>
         <script type="text/javascript">
